# ilbot-collector

./: .gitignore  INSTALL.md  README.md  config.example.json  install.sh  pyproject.toml  run_gui.sh
.github/workflows/: ci.yml
bridge/: api_client.py  config.py  daemon_client.py  h5_builder.py  local_store.py  meta.py  pipeline.py  robot_profile.py  ssh_link.py  upload_manager.py
gui/: main.py
robolabel/: __init__.py
robot/: bridge_daemon.py  camera_streamer.py  g2_h5_builder.py  g2_h5_check.py  start_daemon.sh
robot/legacy/: record_ctl.py  robolabel_record_test.py  robolabel_verify.py
scripts/: e2e_test.py  preflight_robot.py  purge_robot_records.py
tests/: test_units.py
